Centered table and adjusted width and height

--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
 #container{
     border: 10px black solid;
     display: flex;
-    /* margin: 100px; */
+    width: fit-content;
+    height: fit-content;
+    align-self: center;
+    justify-content: center;
 
 }
 
+.board{
+    display: flex;
+    justify-content: center;
+}
 .page_title{
     display: flex;
     justify-content: center;
 }
 
 .createdBoxes{
-    /* margin: 10px; */
+
 }
